--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <! DOCTYPE html>
 <html lang="en">
-<script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="[YOUR_ID]"></script>
+<script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="_sRIx9X_5"></script>
   <meta charset="UTF-8">
   <title>Data Layer Test</title>
-  <script id="usercentrics-cmp" data-settings-id="YOUR-SETTINGS-ID" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
+  <script id="usercentrics-cmp" data-settings-id="_sRIx9X_5" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
 </head>
 
 <body>
