--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <meta charset="UTF-8">
   <title>Data Layer Test</title>
   <script id="usercentrics-cmp" data-settings-id="_sRIx9X_5" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
+     <script id="usercentrics-cmp" data-settings-id="_sRIx9X_5" src="https://app.usercentrics.eu/browser-ui/latest/loader.js" data-tcf-enabled></script>
+
+  
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
