--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <meta charset="UTF-8">
   <title>Data Layer Test</title>
    <script id="usercentrics-cmp" data-settings-id="_sRIx9X_5" src="https://app.usercentrics.eu/browser-ui/latest/loader.js" data-tcf-enabled></script>
-
+ 
   
+  </head>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -12,8 +13,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-PMGZ22S');</script>
 <!-- End Google Tag Manager -->
-  </head>
+
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PMGZ22S"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 this is my personal cmp test...
 
